--- a/wiki/fr/TechDraw_RichTextAnnotation.html
+++ b/wiki/fr/TechDraw_RichTextAnnotation.html
@@ -1,19 +1,17 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw RichTextAnnotation/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+RichTextAnnotation&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_RichTextAnnotation.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw FormatierterBeschriftungstext (62% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_RichTextAnnotation.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw FormatierterBeschriftungstext (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_RichTextAnnotation.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw RichTextAnnotation (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_RichTextAnnotation.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Blocco di testo (62% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_RichTextAnnotation.html" class="mw-pt-progress mw-pt-progress--med" title="Rysunek Techniczny: Wstaw adnotacj&#281; w postaci tekstu sformatowanego (62% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_RichTextAnnotation.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw adnotacj&#281; w postaci tekstu sformatowanego (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_RichTextAnnotation.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1042;&#1089;&#1090;&#1072;&#1074;&#1082;&#1072; &#1072;&#1085;&#1085;&#1086;&#1090;&#1072;&#1094;&#1080;&#1081; &#1092;&#1086;&#1088;&#1084;&#1072;&#1090;&#1080;&#1088;&#1086;&#1074;&#1072;&#1085;&#1085;&#1099;&#1084; &#1090;&#1077;&#1082;&#1089;&#1090;&#1086;&#1084;" (44% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_RichTextAnnotation.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#49436;&#49885; &#51080;&#45716; &#51452;&#49437; (19% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_LeaderLine.html" title="TechDraw LeaderLine/fr">Ligne de rep&egrave;re</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CosmeticVertex.html" title="TechDraw CosmeticVertex/fr">Sommet cosm&eacute;tique</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Annotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Annotation.html" title="TechDraw Annotation/fr">Annotation</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Balloon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Balloon.html" title="TechDraw Balloon/fr">Infobulle</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -159,35 +157,35 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111145732
+Cached time: 20260117134659
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.088 seconds
-Real time usage: 0.129 seconds
-Preprocessor visited node count: 559/1000000
-Post&#8208;expand include size: 27830/2097152 bytes
-Template argument size: 10380/2097152 bytes
+CPU time usage: 0.123 seconds
+Real time usage: 0.218 seconds
+Preprocessor visited node count: 558/1000000
+Post&#8208;expand include size: 27743/2097152 bytes
+Template argument size: 10322/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3431/5000000 bytes
+Unstrip post&#8208;expand size: 3443/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.894      1 -total
- 22.71%    6.788      1 Template:TechDraw_Tools_navi/fr
- 15.31%    4.576      1 Template:Userdocnavi/fr
- 15.30%    4.574      2 Template:Navigation_menu_2
- 12.21%    3.650      4 Template:PropertyData
- 10.56%    3.156      1 Template:GuiCommand/fr
-  9.14%    2.731      2 Template:Docnav/fr
-  7.24%    2.163      1 Template:Code
-  7.19%    2.148      4 Template:Variable
-  5.76%    1.722      1 Template:Clear
+100.00%   63.827      1 -total
+ 20.88%   13.326      1 Template:TechDraw_Tools_navi/fr
+ 18.11%   11.556      4 Template:PropertyData
+ 17.33%   11.060      2 Template:Navigation_menu_2
+ 13.65%    8.710      1 Template:Userdocnavi/fr
+ 10.23%    6.531      4 Template:Variable
+  9.12%    5.821      2 Template:Docnav/fr
+  7.30%    4.662      1 Template:Clear
+  7.14%    4.557      1 Template:GuiCommand/fr
+  6.04%    3.858      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:149182-0!canonical and timestamp 20260111145732 and revision id 1734398. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:149182-0!canonical and timestamp 20260117134659 and revision id 1739464. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
