--- a/wiki/fr/TechDraw_RichTextAnnotation.html
+++ b/wiki/fr/TechDraw_RichTextAnnotation.html
@@ -13,7 +13,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Ins&eacute;rer une annotation de texte enrichi</b> ajoute un bloc d'annotation format&eacute; &agrave; une <a href="../fr/TechDraw_LeaderLine.html" title="TechDraw LeaderLine/fr">Ligne de rep&egrave;re</a> ou &agrave; une vue.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_RichTextBlock_sample.png&amp;filetimestamp=20190506005705&amp;.html" class="mw-file-description"><img src="../File/TechDraw_RichTextBlock_sample.png" decoding="async" width="220" height="123" class="mw-file-element" data-file-width="267" data-file-height="149"></a></span>
@@ -155,13 +153,13 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117134713
+Cached time: 20260117134730
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.130 seconds
-Real time usage: 0.199 seconds
-Preprocessor visited node count: 557/1000000
+CPU time usage: 0.102 seconds
+Real time usage: 0.143 seconds
+Preprocessor visited node count: 556/1000000
 Post&#8208;expand include size: 27656/2097152 bytes
 Template argument size: 10264/2097152 bytes
 Highest expansion depth: 7/100
@@ -171,19 +169,19 @@ Unstrip post&#8208;expand size: 3444/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.679      1 -total
- 23.28%    9.704      1 Template:TechDraw_Tools_navi/fr
- 20.07%    8.363      4 Template:PropertyData
- 15.82%    6.594      2 Template:Navigation_menu_2
- 10.72%    4.468      1 Template:Userdocnavi/fr
-  9.91%    4.130      4 Template:Variable
-  9.72%    4.052      1 Template:GuiCommand/fr
-  9.46%    3.941      2 Template:Docnav/fr
-  6.45%    2.687      1 Template:Code
-  5.00%    2.083      1 Template:Caption
+100.00%   35.595      1 -total
+ 25.09%    8.932      1 Template:TechDraw_Tools_navi/fr
+ 17.73%    6.310      2 Template:Navigation_menu_2
+ 13.95%    4.967      4 Template:PropertyData
+ 10.90%    3.881      1 Template:Userdocnavi/fr
+  9.15%    3.257      2 Template:Docnav/fr
+  8.37%    2.978      4 Template:Variable
+  8.04%    2.861      1 Template:GuiCommand/fr
+  7.09%    2.525      1 Template:Code
+  6.98%    2.484      5 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:149182-0!canonical and timestamp 20260117134712 and revision id 1739466. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:149182-0!canonical and timestamp 20260117134730 and revision id 1739468. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
