--- a/wiki/fr/TechDraw_AxoLengthDimension.html
+++ b/wiki/fr/TechDraw_AxoLengthDimension.html
@@ -1,20 +1,18 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw AxoLengthDimension/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+AxoLengthDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw AxonometrischesL&auml;ngenma&szlig; (93% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw AxonometrischesL&auml;ngenma&szlig; (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_AxoLengthDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw AxoLengthDimension (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Quota lineare assonometrica (57% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Wstaw wymiar d&#322;ugo&#347;ci w aksonometrii (93% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw wymiar d&#322;ugo&#347;ci w aksonometrii (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw AxoLengthDimension
 (&#1063;&#1077;&#1088;&#1090;&#1105;&#1078; &#1051;&#1080;&#1085;&#1077;&#1081;&#1085;&#1099;&#1081; &#1056;&#1072;&#1079;&#1084;&#1077;&#1088; &#1074; &#1055;&#1077;&#1088;&#1089;&#1087;&#1077;&#1082;&#1090;&#1080;&#1074;&#1077;) (14% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#52629;&#52769; &#44600;&#51060; &#52824;&#49688; (57% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Balloon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Balloon.html" title="TechDraw Balloon/fr">Bulle</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_DimensionRepair.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_DimensionRepair.html" title="TechDraw DimensionRepair/fr">R&eacute;paration des cotes</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_LeaderLine.html" title="TechDraw LeaderLine/fr">Ligne de r&eacute;f&eacute;rence</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -141,35 +139,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210114
+Cached time: 20260117135128
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.095 seconds
-Real time usage: 0.495 seconds
-Preprocessor visited node count: 370/1000000
-Post&#8208;expand include size: 24985/2097152 bytes
-Template argument size: 9695/2097152 bytes
+CPU time usage: 0.086 seconds
+Real time usage: 0.138 seconds
+Preprocessor visited node count: 369/1000000
+Post&#8208;expand include size: 24952/2097152 bytes
+Template argument size: 9673/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1745/5000000 bytes
+Unstrip post&#8208;expand size: 1755/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  117.095      1 -total
- 27.61%   32.331      1 Template:TechDraw_Tools_navi/fr
- 13.81%   16.173      2 Template:Docnav/fr
- 11.99%   14.044      2 Template:Navigation_menu_2
- 11.84%   13.866      1 Template:Button
- 11.58%   13.564      1 Template:GuiCommand/fr
-  9.65%   11.295      1 Template:Userdocnavi/fr
-  9.49%   11.111      1 Template:VersionPlus/fr
-  8.90%   10.421      1 Template:Caption
-  5.95%    6.964      1 Template:MenuCommand
+100.00%   31.073      1 -total
+ 24.61%    7.646      1 Template:TechDraw_Tools_navi/fr
+ 23.07%    7.170      2 Template:Navigation_menu_2
+ 21.03%    6.534      1 Template:Userdocnavi/fr
+ 18.83%    5.850      1 Template:GuiCommand/fr
+ 11.21%    3.482      2 Template:Docnav/fr
+  9.53%    2.960      1 Template:Caption
+  5.07%    1.574      1 Template:VersionPlus/fr
+  3.83%    1.190      1 Template:Button
+  3.38%    1.051      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:307166-0!canonical and timestamp 20260111210114 and revision id 1734426. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:307166-0!canonical and timestamp 20260117135128 and revision id 1739476. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
