--- a/wiki/fr/TechDraw_AxoLengthDimension.html
+++ b/wiki/fr/TechDraw_AxoLengthDimension.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw AxoLengthDimension/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+AxoLengthDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw AxonometrischesL&auml;ngenma&szlig; (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_AxoLengthDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw AxoLengthDimension (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Quota lineare assonometrica (57% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw wymiar d&#322;ugo&#347;ci w aksonometrii (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw AxoLengthDimension
@@ -92,14 +92,12 @@
 </div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Balloon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Balloon.html" title="TechDraw Balloon/fr">Bulle</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_DimensionRepair.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_DimensionRepair.html" title="TechDraw DimensionRepair/fr">R&eacute;paration des cotes</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_LeaderLine.html" title="TechDraw LeaderLine/fr">Ligne de r&eacute;f&eacute;rence</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -139,35 +137,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117135128
+Cached time: 20260117135140
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.138 seconds
-Preprocessor visited node count: 369/1000000
-Post&#8208;expand include size: 24952/2097152 bytes
-Template argument size: 9673/2097152 bytes
+CPU time usage: 0.096 seconds
+Real time usage: 0.174 seconds
+Preprocessor visited node count: 368/1000000
+Post&#8208;expand include size: 24919/2097152 bytes
+Template argument size: 9651/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1755/5000000 bytes
+Unstrip post&#8208;expand size: 1756/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.073      1 -total
- 24.61%    7.646      1 Template:TechDraw_Tools_navi/fr
- 23.07%    7.170      2 Template:Navigation_menu_2
- 21.03%    6.534      1 Template:Userdocnavi/fr
- 18.83%    5.850      1 Template:GuiCommand/fr
- 11.21%    3.482      2 Template:Docnav/fr
-  9.53%    2.960      1 Template:Caption
-  5.07%    1.574      1 Template:VersionPlus/fr
-  3.83%    1.190      1 Template:Button
-  3.38%    1.051      1 Template:MenuCommand
+100.00%   42.712      1 -total
+ 22.92%    9.789      1 Template:TechDraw_Tools_navi/fr
+ 18.32%    7.826      1 Template:GuiCommand/fr
+ 16.06%    6.860      2 Template:Navigation_menu_2
+ 14.92%    6.371      1 Template:Userdocnavi/fr
+ 11.84%    5.057      1 Template:VersionPlus/fr
+ 10.75%    4.590      2 Template:Docnav/fr
+  8.26%    3.529      1 Template:Button
+  7.26%    3.103      1 Template:Caption
+  3.51%    1.499      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:307166-0!canonical and timestamp 20260117135128 and revision id 1739476. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:307166-0!canonical and timestamp 20260117135140 and revision id 1739478. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
