--- a/wiki/fr/TechDraw_AxoLengthDimension.html
+++ b/wiki/fr/TechDraw_AxoLengthDimension.html
@@ -14,18 +14,17 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p>TechDraw Cote axonom&eacute;trique
+<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_AxoLengthDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Cote axonom&eacute;trique
 </p>
 </td></tr>
 <tr>
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Annotations &rarr; Cote axonom&eacute;trique
+<td class="ctEven">TechDraw &rarr; Annotations &rarr; Ins&eacute;rer une cote axonom&eacute;trique
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -54,7 +53,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Cote axonom&eacute;trique</b> ajoute une cote &agrave; une vue axonom&eacute;trique. La cote peut &ecirc;tre la longueur d'une ar&ecirc;te ou la distance entre deux points.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_AxoLengthDimensionExample.png&amp;filetimestamp=20230205083622&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AxoLengthDimensionExample.png" decoding="async" width="300" height="201" class="mw-file-element" data-file-width="414" data-file-height="277"></a></span>
@@ -137,35 +135,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117135140
+Cached time: 20260117135258
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.096 seconds
-Real time usage: 0.174 seconds
-Preprocessor visited node count: 368/1000000
-Post&#8208;expand include size: 24919/2097152 bytes
-Template argument size: 9651/2097152 bytes
-Highest expansion depth: 7/100
-Expensive parser function count: 2/100
+CPU time usage: 0.076 seconds
+Real time usage: 0.116 seconds
+Preprocessor visited node count: 365/1000000
+Post&#8208;expand include size: 25213/2097152 bytes
+Template argument size: 9669/2097152 bytes
+Highest expansion depth: 6/100
+Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
 Unstrip post&#8208;expand size: 1756/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.712      1 -total
- 22.92%    9.789      1 Template:TechDraw_Tools_navi/fr
- 18.32%    7.826      1 Template:GuiCommand/fr
- 16.06%    6.860      2 Template:Navigation_menu_2
- 14.92%    6.371      1 Template:Userdocnavi/fr
- 11.84%    5.057      1 Template:VersionPlus/fr
- 10.75%    4.590      2 Template:Docnav/fr
-  8.26%    3.529      1 Template:Button
-  7.26%    3.103      1 Template:Caption
-  3.51%    1.499      1 Template:MenuCommand
+100.00%   25.191      1 -total
+ 32.85%    8.274      1 Template:TechDraw_Tools_navi/fr
+ 20.89%    5.262      2 Template:Navigation_menu_2
+ 14.21%    3.579      1 Template:Userdocnavi/fr
+ 12.47%    3.142      1 Template:GuiCommand/fr
+ 11.09%    2.794      2 Template:Docnav/fr
+  8.18%    2.060      1 Template:VersionPlus/fr
+  8.02%    2.020      1 Template:Caption
+  5.56%    1.400      1 Template:Button
+  4.45%    1.122      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:307166-0!canonical and timestamp 20260117135140 and revision id 1739478. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:307166-0!canonical and timestamp 20260117135258 and revision id 1739480. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
