--- a/wiki/fr/TechDraw_AxoLengthDimension.html
+++ b/wiki/fr/TechDraw_AxoLengthDimension.html
@@ -57,7 +57,7 @@
 <p>L'outil <b>TechDraw Cote axonom&eacute;trique</b> ajoute une cote &agrave; une vue axonom&eacute;trique. La cote peut &ecirc;tre la longueur d'une ar&ecirc;te ou la distance entre deux points.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_AxoLengthDimensionExample.png&amp;filetimestamp=20230205083622&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AxoLengthDimensionExample.png" decoding="async" width="300" height="201" class="mw-file-element" data-file-width="414" data-file-height="277"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Cotes axonom&eacute;triques bas&eacute;es sur un bord (bleu) et deux points (rouge)</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Cotes axonom&eacute;triques bas&eacute;es sur une ar&ecirc;te (bleu) et deux points (rouge)</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -126,15 +126,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117135608
+Cached time: 20260117135632
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.141 seconds
+CPU time usage: 0.092 seconds
+Real time usage: 0.149 seconds
 Preprocessor visited node count: 362/1000000
-Post&#8208;expand include size: 25238/2097152 bytes
-Template argument size: 9694/2097152 bytes
+Post&#8208;expand include size: 25244/2097152 bytes
+Template argument size: 9697/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -142,19 +142,19 @@ Unstrip post&#8208;expand size: 1760/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.556      1 -total
- 35.70%   13.764      2 Template:Navigation_menu_2
- 33.53%   12.929      1 Template:Userdocnavi/fr
- 31.84%   12.275      1 Template:TechDraw_Tools_navi/fr
-  7.89%    3.042      2 Template:Docnav/fr
-  6.78%    2.614      1 Template:GuiCommand/fr
-  6.68%    2.577      1 Template:VersionPlus/fr
-  4.84%    1.868      1 Template:Caption
-  3.04%    1.174      1 Template:MenuCommand
-  2.89%    1.113      1 Template:Button
+100.00%   25.443      1 -total
+ 36.30%    9.235      1 Template:TechDraw_Tools_navi/fr
+ 25.47%    6.481      2 Template:Navigation_menu_2
+ 16.65%    4.237      1 Template:Userdocnavi/fr
+ 11.22%    2.854      2 Template:Docnav/fr
+ 10.40%    2.645      1 Template:GuiCommand/fr
+  6.19%    1.575      1 Template:Caption
+  5.69%    1.448      1 Template:VersionPlus/fr
+  5.36%    1.363      1 Template:Button
+  5.02%    1.277      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:307166-0!canonical and timestamp 20260117135608 and revision id 1739486. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:307166-0!canonical and timestamp 20260117135632 and revision id 1739488. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
